k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openscad
  labels:
    app.kubernetes.io/name: manyfold
    app.kubernetes.io/part-of: openscad
